tests/parsing/smtlib/poly/errors/003_qual_identifier_bad_sort_1.psmt2
(set-logic ALL)
(assert (as foo _))
