tests/parsing/smtlib/poly/errors/003_qual_identifier_bad_sort_1.expected
File "tests/parsing/smtlib/poly/errors/003_qual_identifier_bad_sort_1.psmt2", line 2, character 16-17:
Error while parsing a qualified identifier, read the reserved word '_',
      but expected a sort, i.e. either an identifier, or a sort constructor
      application; note that keywords (such as '_', 'as', ...) are none of
      these, and thus are not allowed here..
